[gd_scene load_steps=2 format=3 uid="uid://ddrotgc2cvbhn"]

[ext_resource type="Script" uid="uid://cwk051b0e74yp" path="res://scenes/menus_battle/menus_change_weapon/menu_change_weapon.gd" id="1_edwhu"]

[node name="MenuChangeWeapon" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edwhu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Equipped:"

[node name="LabelCurrent" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Current Weapon"

[node name="ButtonRemove" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonCancel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonRemove" to="." method="_on_button_remove_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
